# prodmozglin

./: CMakeLists.txt  Dockerfile  conanfile.txt  docker-compose.yml
src/: common.cpp  commonD.cpp  consumer.cpp  consumerd.cpp  database.cpp  database.h  log.hpp  main.cpp  producer.cpp  server.cpp  server.h
